# Rustico

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  package-lock.json
.github/workflows/: rust.yml
contentmanager/: package-lock.json  package.json
contentmanager/src/: App.js  router.js
contentmanager/src/Routes/: login.js
src/: .env  main.rs
src/DB/: create_table_post.sql  create_table_publisher.sql  dbconnector.rs  mod.rs
src/Models/: PostModel.rs  Publisher.rs  Restrict.rs  Tag.rs  login.rs  mod.rs  publishermodel.rs
src/Routes/: Post.rs  login.rs  mod.rs  publisher.rs
src/models/: Post.rs  Publisher.rs
src/routes/: post.rs
templates/: artigos.html.tera  index.html.tera  post.html.tera  sobre.html.tera
