[package]
name = "Rustico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mongodb = "2.3.1"


[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["async-std-runtime"]
features = ["tokio-sync"]