[package]
name = "Rustico"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rusqlite = "0.28.0"
rocket_cors = "0.5.1"
dotenv = "0.15.0"
jsonwebtoken = "8.2.1"