[package]
name = "rustico"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_cors = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
deunicode = "1"